tests/errors/inline_fragment_unselected_field_graphql.dang
# Test that accessing a field not selected in a GraphQL inline fragment is caught at type-checking time

import Test

pub results = search(query: "John").{
  ... on User { name }
  ... on Post { title }
}

pub first = results[0]
pub desc = case (first) {
  u: User => u.age
  p: Post => p.title
}
